force-app/main/default/objects/SFDC_Issue__c/SFDC_Issue__c.object-meta.xml
<CustomObject>
    <description>Tracks salesforce.com (SFDC) issues found during testing</description>
    <label>SFDC Issue</label>
    <nameField>
        <displayFormat>I-{000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>