force-app/main/default/objects/SFDC_Issue__c/fields/Application_Area__c.field-meta.xml
<CustomField>
    <fullName>Application_Area__c</fullName>
    <label>Application Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interface</fullName>
            </value>
            <value>
                <fullName>Customers</fullName>
            </value>
            <value>
                <fullName>Applications/Form</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Tasks/Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>