force-app/main/default/objects/SFDC_Issue__c/fields/Approval_or_Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_or_Rejection_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval or Rejection Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>