force-app/main/default/objects/SFDC_Issue__c/fields/Follow_up_Comments__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Follow-up Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>