force-app/main/default/objects/SFDC_Issue__c/fields/Related_Issue__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to relate this issue with another similar or duplicate issue</inlineHelpText>
    <label>Related Issue</label>
    <referenceTo>SFDC_Issue__c</referenceTo>
    <relationshipLabel>Related Issues</relationshipLabel>
    <relationshipName>SFDC_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>