force-app/main/default/objects/SFDC_Issue__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolution</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>