force-app/main/default/objects/SFDC_Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New/Open</fullName>
                <default>true</default>
                <label>New/Open</label>
            </value>
            <value>
                <fullName>Under Review/Evaluating Effort</fullName>
            </value>
            <value>
                <fullName>Fix In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Testing</fullName>
            </value>
            <value>
                <fullName>Tested and Approved</fullName>
            </value>
            <value>
                <fullName>Tested and Rejected</fullName>
            </value>
            <value>
                <fullName>Closed - Duplicate</fullName>
            </value>
            <value>
                <fullName>Deferred - Subsequent Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>