force-app/main/default/objects/SFDC_Issue__c/fields/Steps_to_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Reproduce__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Steps to Reproduce</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>