force-app/main/default/objects/SFDC_Issue__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a short summary of the issue here</inlineHelpText>
    <label>Subject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>