force-app/main/default/objects/SFDC_Issue__c/listViews/All_Issues_2.listView-meta.xml
<ListView>
    <fullName>All_Issues_2</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Issue_Category__c</columns>
    <columns>Priority__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready for Testing</value>
    </filters>
    <label>All Issues Ready for Testing</label>
</ListView>