force-app/main/default/objects/SFDC_Issue__c/listViews/All_Open_Service_Issues.listView-meta.xml
<ListView>
    <fullName>All_Open_Service_Issues</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Issue_Category__c</columns>
    <columns>Application_Area__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Tested and Approved,Tested and Rejected</value>
    </filters>
    <label>All Tested (Approved and Rejected)</label>
</ListView>