force-app/main/default/objects/SFDC_Issue__c/listViews/Phase_2.listView-meta.xml
<ListView>
    <fullName>Phase_2</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Issue_Category__c</columns>
    <columns>Application_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue_Category__c</field>
        <operation>equals</operation>
        <value>Phase 2</value>
    </filters>
    <label>Phase 2</label>
</ListView>